--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../frontend/public/icon.png" />
+    <link rel="icon" type="image/png" href="/public/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Codelab - Practice Coding Problems, Discuss & Learn</title>
+    <meta name="description" content="Codelab: Practice coding problems, discuss solutions, and learn with video editorials. Join contests and improve your skills." />
+    <meta name="keywords" content="coding, problems, practice, contests, solutions, video, editorial, discussion, react, vite" />
+    <meta name="author" content="Codelab Team" />
+    <meta name="robots" content="index, follow" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Codelab - Practice Coding Problems, Discuss & Learn" />
+    <meta property="og:description" content="Practice coding problems, discuss solutions, and learn with video editorials on Codelab." />
+    <meta property="og:image" content="/public/icon.png" />
+    <meta property="og:url" content="https://your-codelab-domain.com" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Codelab - Practice Coding Problems, Discuss & Learn" />
+    <meta name="twitter:description" content="Practice coding problems, discuss solutions, and learn with video editorials on Codelab." />
+    <meta name="twitter:image" content="/public/icon.png" />
   </head>
   <body>
     <div id="root"></div>
